[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
sbi_call = { path = "../crates/sbi_call" }
print = { path = "../crates/print" }
panic = { path = "../crates/panic" }
riscv_register = { path = "../crates/riscv_register" }
elf_reader = { path = "../crates/elf_reader" }
heap_allocator = { path = "../crates/heap_allocator" }
entry = { path = "../crates/entry" }
loader = { path = "../crates/loader" }
exception = { path = "../crates/exception" }
