[package]
name = "rcore"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
page_table = { path = "../crates/page_table" }
elf_reader = { path = "../crates/elf_reader" }
sbi_call = { path = "../crates/sbi_call" }
