[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
page_table = { path = "../crates/page_table" }
elf_reader = { path = "../crates/elf_reader" }
sbi_call = { path = "../crates/sbi_call" }
print = { path = "../crates/print" }
panic = { path = "../crates/panic" }
riscv_register = { path = "../crates/riscv_register" }
heap_allocator = { path = "../crates/heap_allocator" }
