[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
page_table = { path = "../crates/page_table" }
elf_reader = { path = "../crates/elf_reader" }
sbi_call = { path = "../crates/sbi_call" }
print = { path = "../crates/print" }
panic = { path = "../crates/panic" }
riscv_register = { path = "../crates/riscv_register" }
heap_allocator = { path = "../crates/heap_allocator" }
entry = { path = "../crates/entry" }
loader = { path = "../crates/loader" }
exception = { path = "../crates/exception", features = ["memory_set"] }
lazy_static = { version = "0.1.0", path = "../crates/lazy_static" }
frame_allocator = { version = "0.1.0", path = "../crates/frame_allocator" }
virtio-drivers = { path = "../crates/virtio-drivers", version = "0.1.0" }
fs = { version = "0.1.0", path = "../fs" }
sys_func = { version = "0.1.0", path = "../crates/sys_func" }
mutrc = { version = "0.1.0", path = "../crates/mutrc" }
