[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
page_table = { path = "../crates/page_table" }
elf_reader = { path = "../crates/elf_reader" }
sbi_call = { path = "../crates/sbi_call" }
riscv_register = { path = "../crates/riscv_register" }
entry = { path = "../crates/entry" }
exception = { path = "../crates/exception" }
lazy_static = { version = "0.1.0", path = "../crates/lazy_static" }
frame_allocator = { version = "0.1.0", path = "../crates/frame_allocator" }
virtio-drivers = { path = "../crates/virtio-drivers", version = "0.1.0" }
fs = { version = "0.1.0", path = "../fs" }
alloc_ext = { version = "0.1.0", path = "../crates/alloc_ext" }
core_ext = { version = "0.1.0", path = "../crates/core_ext" }
bitflags = "1.3.2"
sys_call_id = { version = "0.1.0", path = "../crates/sys_call_id" }
